--- a/src/main/resources/com/example/sudoku/game-view.fxml
+++ b/src/main/resources/com/example/sudoku/game-view.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -35,6 +36,89 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             </rowConstraints>
+         <children>
+            <TextField prefHeight="51.0" prefWidth="43.0" />
+            <TextField GridPane.columnIndex="1" />
+            <TextField GridPane.columnIndex="2" />
+            <TextField GridPane.columnIndex="3" />
+            <TextField GridPane.columnIndex="4" />
+            <TextField GridPane.columnIndex="5" />
+            <TextField GridPane.columnIndex="6" />
+            <TextField GridPane.columnIndex="7" />
+            <TextField GridPane.columnIndex="8" />
+            <TextField GridPane.rowIndex="1" />
+            <TextField GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <TextField GridPane.columnIndex="2" GridPane.rowIndex="1" />
+            <TextField GridPane.columnIndex="3" GridPane.rowIndex="1" />
+            <TextField GridPane.columnIndex="4" GridPane.rowIndex="1" />
+            <TextField GridPane.columnIndex="5" GridPane.rowIndex="1" />
+            <TextField GridPane.columnIndex="6" GridPane.rowIndex="1" />
+            <TextField GridPane.columnIndex="7" GridPane.rowIndex="1" />
+            <TextField GridPane.columnIndex="8" GridPane.rowIndex="1" />
+            <TextField GridPane.rowIndex="2" />
+            <TextField GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <TextField GridPane.columnIndex="2" GridPane.rowIndex="2" />
+            <TextField GridPane.columnIndex="3" GridPane.rowIndex="2" />
+            <TextField GridPane.columnIndex="4" GridPane.rowIndex="2" />
+            <TextField GridPane.columnIndex="5" GridPane.rowIndex="2" />
+            <TextField GridPane.columnIndex="6" GridPane.rowIndex="2" />
+            <TextField GridPane.columnIndex="7" GridPane.rowIndex="2" />
+            <TextField GridPane.columnIndex="8" GridPane.rowIndex="2" />
+            <TextField GridPane.rowIndex="3" />
+            <TextField GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <TextField GridPane.columnIndex="2" GridPane.rowIndex="3" />
+            <TextField GridPane.columnIndex="3" GridPane.rowIndex="3" />
+            <TextField GridPane.columnIndex="4" GridPane.rowIndex="3" />
+            <TextField GridPane.columnIndex="5" GridPane.rowIndex="3" />
+            <TextField GridPane.columnIndex="6" GridPane.rowIndex="3" />
+            <TextField GridPane.columnIndex="7" GridPane.rowIndex="3" />
+            <TextField GridPane.columnIndex="8" GridPane.rowIndex="3" />
+            <TextField GridPane.rowIndex="4" />
+            <TextField GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <TextField GridPane.columnIndex="2" GridPane.rowIndex="4" />
+            <TextField GridPane.columnIndex="3" GridPane.rowIndex="4" />
+            <TextField GridPane.columnIndex="4" GridPane.rowIndex="4" />
+            <TextField GridPane.columnIndex="5" GridPane.rowIndex="4" />
+            <TextField GridPane.columnIndex="6" GridPane.rowIndex="4" />
+            <TextField GridPane.columnIndex="7" GridPane.rowIndex="4" />
+            <TextField GridPane.columnIndex="8" GridPane.rowIndex="4" />
+            <TextField GridPane.rowIndex="5" />
+            <TextField GridPane.columnIndex="1" GridPane.rowIndex="5" />
+            <TextField GridPane.columnIndex="2" GridPane.rowIndex="5" />
+            <TextField GridPane.columnIndex="3" GridPane.rowIndex="5" />
+            <TextField GridPane.columnIndex="4" GridPane.rowIndex="5" />
+            <TextField GridPane.columnIndex="5" GridPane.rowIndex="5" />
+            <TextField GridPane.columnIndex="6" GridPane.rowIndex="5" />
+            <TextField GridPane.columnIndex="7" GridPane.rowIndex="5" />
+            <TextField GridPane.columnIndex="8" GridPane.rowIndex="5" />
+            <TextField GridPane.rowIndex="6" />
+            <TextField GridPane.columnIndex="1" GridPane.rowIndex="6" />
+            <TextField GridPane.columnIndex="2" GridPane.rowIndex="6" />
+            <TextField GridPane.columnIndex="3" GridPane.rowIndex="6" />
+            <TextField GridPane.columnIndex="4" GridPane.rowIndex="6" />
+            <TextField GridPane.columnIndex="5" GridPane.rowIndex="6" />
+            <TextField GridPane.columnIndex="6" GridPane.rowIndex="6" />
+            <TextField GridPane.columnIndex="7" GridPane.rowIndex="6" />
+            <TextField GridPane.columnIndex="8" GridPane.rowIndex="6" />
+            <TextField GridPane.rowIndex="7" />
+            <TextField GridPane.columnIndex="1" GridPane.rowIndex="7" />
+            <TextField GridPane.columnIndex="2" GridPane.rowIndex="7" />
+            <TextField GridPane.columnIndex="3" GridPane.rowIndex="7" />
+            <TextField GridPane.columnIndex="4" GridPane.rowIndex="7" />
+            <TextField GridPane.columnIndex="5" GridPane.rowIndex="7" />
+            <TextField GridPane.columnIndex="6" GridPane.rowIndex="7" />
+            <TextField GridPane.columnIndex="7" GridPane.rowIndex="7" />
+            <TextField GridPane.columnIndex="8" GridPane.rowIndex="7" />
+            <TextField GridPane.rowIndex="8" />
+            <TextField GridPane.columnIndex="1" GridPane.rowIndex="8" />
+            <TextField GridPane.columnIndex="2" GridPane.rowIndex="8" />
+            <TextField GridPane.columnIndex="3" GridPane.rowIndex="8" />
+            <TextField GridPane.columnIndex="4" GridPane.rowIndex="8" />
+            <TextField GridPane.columnIndex="5" GridPane.rowIndex="8" />
+            <TextField GridPane.columnIndex="6" GridPane.rowIndex="8" />
+            <TextField GridPane.columnIndex="7" GridPane.rowIndex="8" />
+            <TextField GridPane.columnIndex="8" GridPane.rowIndex="8" />
+         </children>
         </GridPane>
         <Button layoutX="561.0" layoutY="406.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="84.0" style="-fx-background-color: D1EDEA;" text="Dificil" />
         <ImageView fitHeight="145.0" fitWidth="140.0" layoutX="562.0" layoutY="102.0" pickOnBounds="true" preserveRatio="true">
