--- a/src/main/resources/com/example/sudoku/game-view.fxml
+++ b/src/main/resources/com/example/sudoku/game-view.fxml
@@ -1,36 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="534.0" prefWidth="790.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sudoku.controller.GameController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="562.0" prefWidth="753.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sudoku.controller.GameController">
     <children>
-        <Button layoutX="561.0" layoutY="406.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="84.0" style="-fx-background-color: D1EDEA;" text="Dificil" />
-        <ImageView fitHeight="145.0" fitWidth="140.0" layoutX="562.0" layoutY="102.0" pickOnBounds="true" preserveRatio="true">
+        <ImageView fitHeight="347.0" fitWidth="203.0" layoutX="526.0" layoutY="165.0" pickOnBounds="true" preserveRatio="true">
             <image>
-                <Image url="@images/pochacco.png" />
+                <Image url="@../../../../../../../../Pictures/kuromi.jpg" />
             </image>
         </ImageView>
-        <Label layoutX="292.0" layoutY="24.0" style="-fx-border-radius: 10;" text="S U D O K U" textFill="#729792">
-            <font>
-                <Font name="Berlin Sans FB" size="41.0" />
-            </font>
-        </Label>
-        <Label layoutX="543.0" layoutY="267.0" prefHeight="25.0" prefWidth="119.0" style="-fx-background-color: EDFFFD;" text="Modo de juego">
-            <font>
-                <Font size="16.0" />
-            </font>
-        </Label>
-        <Button layoutX="561.0" layoutY="310.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="84.0" style="-fx-background-color: D1EDEA;" text="Facil" />
-        <Button layoutX="561.0" layoutY="357.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="84.0" style="-fx-background-color: D1EDEA;" text="Medio" />
-      <GridPane fx:id="sudokuBoard" gridLinesVisible="true" layoutX="51.0" layoutY="121.0" prefHeight="342.0" prefWidth="418.0">
+      <GridPane fx:id="sudokuBoard" gridLinesVisible="true" layoutX="50.0" layoutY="165.0" prefHeight="347.0" prefWidth="414.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="95.0" minWidth="10.0" prefWidth="49.0" />
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="165.0" minWidth="10.0" prefWidth="47.0" />
@@ -44,8 +28,8 @@
         </columnConstraints>
         <rowConstraints>
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="50.0" minHeight="10.0" prefHeight="33.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="39.0" minHeight="10.0" prefHeight="39.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -54,5 +38,10 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
       </GridPane>
+      <ImageView fitHeight="159.0" fitWidth="288.0" layoutX="234.0" layoutY="-4.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../../../../../../Pictures/LOGO.png" />
+         </image>
+      </ImageView>
     </children>
 </Pane>
